--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -3,6 +3,6 @@
   {% if words < 360 %}
    阅读用时 1 min 
   {% else %}
-    阅读用时 {{ words | divided_by:180 }} 
+    阅读用时 {{ words | divided_by:180 }} mins
   {% endif %}
 </span>
