--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<a class="btn" href= "{{ site.url }}/" >
-  Home
+<a class="btn" href= "{{ site.baseurl}}/" >
+  返回首页
 </a>
 {% if page.image.feature %}
 <div class="post-image-feature">
