--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -12,7 +12,7 @@ layout: default
       {% if post.categories.size > 0 %}
       •
       {% for cat in post.categories %}
-        <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
+        <a class="post-cat" href="{{ site.baseurl }}/categories/#{{ cat }}">{{ cat }}</a>
         {% unless forloop.last %}
         <span>/</span>
         {% endunless %}
@@ -20,7 +20,7 @@ layout: default
       {% endif %}
     </p>
     <h4>
-      <a href="{{ site.url }}{{ post.url }}" class="post-title" title="{{ post.title }}">{{ post.title }}</a>
+      <a href="{{ post.url | prepend: site.baseurl }}" class="post-title" title="{{ post.title }}">{{ post.title }}</a>
       {% if post.link %}
       <a class="post-title-link" href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-external-link"></i></a>
       {% endif %}
@@ -34,13 +34,17 @@ layout: default
 
     </header>
 
-    {% if post.excerpt %}
+
     <div class="post-description">
-      <p>
-        {{ post.excerpt }}
-      </p>
-    </div>
+    <p>
+    {% if post.content contains site.excerpt_separator %}
+       {{ post.excerpt }}
+       <p style="text-align: right"><a href="{{ post.url | prepend: site.baseurl }}">阅读全文</a></p>
+    {% else %}
+      {{ post.content }}
     {% endif %}
+    </p>
+    </div>
 
     {% if post.image.feature %}
     <div class="post-image-feature">
