change redirect site link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,14 +11,14 @@
     <ul class="nav-list">
       <li class="nav-item">
         <a href="{{ site.baseurl }}/">主页</a>
-        <span>/</span>
+       <span>/</span> 
       </li>
-      {% for page in site.pages %} {% if page.title %}
+      {% for page in site.pages limit: 7 %} {% if page.title  %}
       <li class="nav-item">
         <a href="{{  page.url | prepend: site.baseurl }}">{{ page.title }}</a>
         {% unless forloop.last %}
           <span>/</span>
-        {% endunless %}
+        {% endunless %} 
       </li>
       {% endif %} {% endfor %}
     </ul>
