--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% for post in site.posts %}
+{% for post in paginator.posts %}
 <section class="post">
   <header class="post-header">
     <p class="post-meta">
@@ -63,4 +63,20 @@ layout: default
     {% endif %}
 
 </section>
+
 {% endfor %}
+
+
+
+<section class="pager">
+  {% if paginator.previous_page %}
+  {% if paginator.previous_page == 1 %}
+  <a class="btn btn-pager" href="{{site.baseurl}}/" title="查看新贴">&larr; 查看新贴</a>
+  {% else %}
+  <a class="btn btn-pager" href="{{site.baseurl}}/page{{ paginator.previous_page }}/" title="查看新贴">&larr; 查看新贴</a>
+  {% endif %}
+  {% endif %}
+  {% if paginator.next_page %}
+  <a class="btn btn-pager" href="{{site.baseurl}}/page{{ paginator.next_page }}/" title="查看老帖">查看老帖 &rarr;</a>
+  {% endif %}
+</section>
