--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -61,6 +61,8 @@ $success:          #65e892;
 $danger:           #f83e4b;
 $warning:          #F5A623;
 $info:             #09ABF6;
+$pager-col:        #1E6B52;
+$pager-disable:    #D3CCBC;
 
 // Tables
 $table-border-color: #d0d0d0 !default;
