--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,7 @@
   <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
   <!-- 32x32 -->
   <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
+
+  {% include js.html %}
+
 </head>
