again, I still don't know why I cannot use google analytics on this site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,6 @@
   <!-- 32x32 -->
   <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
 
-  {% include js.html %}
+  {% include google_analytics.js %}
 
 </head>
