change the name of old post tag

--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -77,6 +77,6 @@ layout: default
   {% endif %}
   {% endif %}
   {% if paginator.next_page %}
-  <a class="btn btn-pager" href="{{site.baseurl}}/page{{ paginator.next_page }}/" title="查看老帖">查看老帖 &rarr;</a>
+  <a class="btn btn-pager" href="{{site.baseurl}}/page{{ paginator.next_page }}/" title="查看旧帖">查看旧帖 &rarr;</a>
   {% endif %}
 </section>
